# harness

./: .env.example  .gitignore  BOOTSTRAP_REPORT.md  DECISIONS.md  pyproject.toml
.github/workflows/: ci.yml
src/harness/: __init__.py  agent.py  agent_runtime.py  capability.py  commands.py  config.py  daemon.py  envelope.py  memory_capability.py  memory_gate.py  pydantic_ai_adapter.py  run_loop.py  run_protocol.py  spine_client.py  tools_memory.py
tests/: test_agent.py  test_agent_runtime.py  test_config.py  test_daemon.py  test_envelope.py  test_memory_capability.py  test_memory_gate.py  test_run_loop.py  test_spine_client.py  test_spine_transport.py  test_tools_memory.py
tests/contract/: contract_app.py  docker-compose.yml  run.sh  test_spine_contract.py
verification/: README.md
verification/bootstrap/: README.md
verification/h1/: README.md
verification/h2/: README.md
verification/h3/: README.md
verification/h4/: README.md  scenario_app.py  trace.jsonl
verification/h5/: README.md  SOP.md  assert_trace.py  scenario_app.py  trace-commit-fail.jsonl  trace-desktop.jsonl  trace-mobile.jsonl  trace-prepare-fail.jsonl
verification/h7/: README.md
web/: index.html  package-lock.json  package.json
web/src/: App.tsx  MemoryGate.tsx  main.tsx  protocol.ts  socket.ts  store.ts
web/src/assets/: base.css  shell.css
